tests/miniJava/neg/001082_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new class java { public static void Main ( String [ ] java ) { { } } } int [ 0 ] ; } }
